Move to demo.webfirewall.dev

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -177,7 +177,7 @@ window.addEventListener('load', () => {
     <h2>Test rate-limiting and bot blocking</h2>
     <p>You can test our rate limiting features with the following button,
         this is equivalent to running the following cURL command</p>
-    <code class="code">curl https://zen-demo-java.fly.dev/test_ratelimiting_1</code>
+    <code class="code">curl https://demo.webfirewall.dev/test_ratelimiting_1</code>
     <button class="button" id="rate_limiting" style="display: inline;">Test rate-limiting</button>
     <span style="color: #555; padding: 0 6px;">(max 3 requests / minute)</span>
     <code id="rate_limiting_res" class="req_result">
@@ -192,7 +192,7 @@ window.addEventListener('load', () => {
     <code class="code">
         curl \<br/>
         <span style="width: 20px; display: inline-block;"></span>-H "User-Agent: Mozilla/5.0 (compatible; Bytespider/1.0; +http://bytespider.com/bot.html)" \<br/>
-        <span style="width: 20px; display: inline-block;"></span>-X GET https://zen-demo-java.fly.dev/test_bot_blocking
+        <span style="width: 20px; display: inline-block;"></span>-X GET https://demo.webfirewall.dev/test_bot_blocking
     </code>
     <button class="button" id="bot_blocking1">Test bot blocking (safe header)</button>
     <button class="button" id="bot_blocking2">Test bot blocking (dangerous header)</button>
@@ -207,7 +207,7 @@ window.addEventListener('load', () => {
     <code class="code">
         curl \<br/>
         <span style="width: 20px; display: inline-block;"></span>-H "user: 123456" \<br/>
-        <span style="width: 20px; display: inline-block;"></span>-X GET https://zen-demo-java.fly.dev/test_user_blocking
+        <span style="width: 20px; display: inline-block;"></span>-X GET https://demo.webfirewall.dev/test_user_blocking
     </code>
     <button class="button" id="user_123456" style="display: inline;">Request</button>
     <span style="color: #555; padding: 0 6px;">with allowed user (ID: 123456)</span>
@@ -218,7 +218,7 @@ window.addEventListener('load', () => {
     <code class="code">
         curl \<br/>
         <span style="width: 20px; display: inline-block;"></span>-H "user: 789" \<br/>
-        <span style="width: 20px; display: inline-block;"></span>-X GET https://zen-demo-java.fly.dev/test_user_blocking
+        <span style="width: 20px; display: inline-block;"></span>-X GET https://demo.webfirewall.dev/test_user_blocking
     </code>
     <button class="button" id="user_789" style="display: inline;">Request</button>
     <span style="color: #555; padding: 0 6px;">with blocked user (ID: 789)</span>
