--- a/src/main/resources/create.html
+++ b/src/main/resources/create.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script async defer data-website-id="9b61da17-d763-4d51-a145-b6acce1d9f82" src="https://analytics.woutfeys.be/umami.js"></script>
     <script src="/js/example-copy.js"></script>
-    <title>Zen Demo | Add a New Pet</title>
+    <title>Zen Live Example | Add a New Pet</title>
     <style>
         @import url('/css/general.css');
 
