--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zen by Aikido: Demo Application</title>
+    <title>Zen by Aikido: Live Example</title>
     <script async defer data-website-id="9b61da17-d763-4d51-a145-b6acce1d9f82" src="https://analytics.woutfeys.be/umami.js"></script>
     <style>
         @import url('/css/general.css');
@@ -155,10 +155,10 @@ window.addEventListener('load', () => {
 <body>
 <img src="/aikido_logo.svg" class="logo" />
 <div class="container">
-    <h1>Zen by Aikido: Demo</h1>
+    <h1>Zen by Aikido: Live Example</h1>
     <p>
         Zen, developed by Aikido, is designed to protect your web applications from a wide range of vulnerabilities.
-        This is our Demo page where you can experiment with different types of injections and attacks. You can also test
+        This is a Live Example where you can experiment with different types of injections and attacks. You can also test
         our bot blocking and rate-limiting features! <br/> <br/>
         → <a href="https://aikido.dev/zen">Install Zen</a> and start securing your web applications today! <br/>
         → <a href="https://github.com/AikidoSec/firewall-java">GitHub page</a>
@@ -203,7 +203,7 @@ window.addEventListener('load', () => {
 
 <div class="container">
     <h2>User blocking</h2>
-    <p>In this demo app the user is determined by a <em>user</em> header, we provided some examples here</p>
+    <p>In this example app the user is determined by a <em>user</em> header, we provided some examples here</p>
     <code class="code">
         curl \<br/>
         <span style="width: 20px; display: inline-block;"></span>-H "user: 123456" \<br/>
