--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -158,8 +158,9 @@ window.addEventListener('load', () => {
     <h1>Zen by Aikido: Live Example</h1>
     <p>
         Zen, developed by Aikido, is designed to protect your web applications from a wide range of vulnerabilities.
-        This is a Live Example where you can experiment with different types of injections and attacks. You can also test
-        our bot blocking and rate-limiting features! <br/> <br/>
+        This is a live example app. Zen is installed and configured to protect this application.
+        Here you can experiment with different types of injection attacks, user blocking, rate-limiting, bot blocking to see how Zen is able to
+        protect against unwanted behavior at runtime.<br/> <br/>
         → <a href="https://aikido.dev/zen">Install Zen</a> and start securing your web applications today! <br/>
         → <a href="https://github.com/AikidoSec/firewall-java">GitHub page</a>
     </p>
