Make database error obvious

--- a/src/main/resources/create.html
+++ b/src/main/resources/create.html
@@ -118,13 +118,8 @@
             },
             body: JSON.stringify({ name: petName })
         })
-        .then(response => {
-            if (response.ok) {
-                alert('Pet added successfully!');
-                window.location.reload()
-            } else {
-                alert('Error adding pet. Please try again.');
-            }
+        .then(async (response) => {
+            alert('Response: ' + await response.text());
         })
         .catch(error => console.error('Error:', error));
     });
